--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,15 @@ body {
     --font-size:20px;
 }
 
+@keyframes moveRight {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(10px);
+    }
+}
+
 .cardgroup {
     display: grid;
     grid-template-columns: repeat(3, 100px);
@@ -24,6 +33,7 @@ body {
     padding: 20px;
     color: white;
     text-align: center;
+    transition: transform 0.5s ease;
 }
 
 .card:first-child {
@@ -40,6 +50,7 @@ body {
 }
 
 .card:hover {
+    transform: scale(1.1);
     cursor: pointer;
     background-color: green;
 }
@@ -61,7 +72,6 @@ body {
 
 blockquote {
     font-style: italic;
-    color: green;
     margin: 20px 0;
     padding: 10px;
     border-left: 5px solid black;
